--- a/pokemon_final_api/Gemfile
+++ b/pokemon_final_api/Gemfile
@@ -21,7 +21,7 @@ gem 'coffee-rails', '~> 4.2'
 # See https://github.com/rails/execjs#readme for more supported runtimes
 # gem 'therubyracer', platforms: :ruby
 
-#gem devise for authentication
+#gem devise for auth
 gem 'devise'
 gem 'devise_token_auth'
 gem 'omniauth'
