--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/jase-d-ace/final-project#readme",
   "dependencies": {
+    "axios": "^0.16.1",
     "cors": "^2.8.3",
     "express": "^4.15.2",
     "react": "^15.5.4",
