--- a/pokemon_final_api/Gemfile
+++ b/pokemon_final_api/Gemfile
@@ -26,6 +26,9 @@ gem 'devise'
 gem 'devise_token_auth'
 gem 'omniauth'
 
+#gem rack-cors for CORS compatibility
+gem 'rack-cors'
+
 # Use jquery as the JavaScript library
 gem 'jquery-rails'
 # Turbolinks makes navigating your web application faster. Read more: https://github.com/turbolinks/turbolinks
