--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "j-toker": "0.0.10-beta3",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
+    "pg-promise": "^5.6.7",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
     "react-router-dom": "^4.1.1"
