--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "express": "^4.15.2",
     "express-session": "^1.15.2",
     "j-toker": "0.0.10-beta3",
+    "node-cron": "^1.1.3",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
     "pg-promise": "^5.6.7",
