--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "pg-promise": "^5.6.7",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
-    "react-router-dom": "^4.1.1"
+    "react-router-dom": "^4.1.1",
+    "socket.io": "^1.7.3"
   },
   "devDependencies": {
     "babel-core": "^6.24.1",
